Formatting + Suchita's changes
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@453 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -1,20 +1,20 @@
 %\svnidlong
-%{$HeadURL: svn+ssh://doglioni@svn.cern.ch/reps/LHCDMF/trunk/doc/tex/Introduction.tex $}
-%{$LastChangedDate: 2015-06-30 22:05:35 +0200 (Tue, 30 Jun 2015) $}
-%{$LastChangedRevision: 434 $}
-%{$LastChangedBy: doglioni $}
-%\svnid{$Id: Introduction.tex 434 2015-06-30 20:05:35Z doglioni $}
+%{$HeadURL$}
+%{$LastChangedDate$}
+%{$LastChangedRevision$}
+%{$LastChangedBy$}
+%\svnid{$Id$}
 
 Dark matter (DM) \sidenote{Many theories of physics beyond the Standard Model predict the existence
 of stable, neutral, weakly-interacting and massive particles that are
-putative Dark Matter candidates. In the following, we refer to such
-matter as Dark Matter, even though the observation of such matter at a collider
+putative DM candidates. In the following, we refer to such
+matter as DM, even though the observation of such matter at a collider
 could only establish that it is neutral, weakly-interactive, massive and stable
 on the distance-scales of tens of meters.} has not yet been observed in particle physics experiments, and
 there is not yet any evidence for non-gravitational interactions
-between Dark Matter and Standard Model (SM) particles.  If such
-interactions exist, particles of Dark Matter could be produced
-at the LHC. Since Dark Matter particles themselves do not produce signals
+between DM and the Standard Model (SM) particles.  If such
+interactions exist, particles of DM could be produced
+at the LHC. Since DM particles themselves do not produce signals
 in the LHC detectors, one way to observe them is when they are produced in association
 with a visible SM particle X(=$g, q, \gamma, Z, W$, or $h$).
 %% so simple pair-production of Dark Matter particles, for example,
@@ -38,22 +38,22 @@ CMS~\cite{Khachatryan:2014rra,Khachatryan:2014rwa,Khachatryan:2014tva,Khachatrya
 employed a basis of contact interaction operators in effective field
 theories (EFTs) \cite{Goodman:2010yf,Goodman:2010ku} to calculate the
 possible signals. %\Todo{Check these references here}
-These EFTs assume that production of Dark Matter takes place through a
+These EFTs assume that production of DM takes place through a
 contact interaction involving a quark-antiquark pair, or two gluons,
-and two Dark Matter particles.  In this case, the missing energy
+and two DM particles.  In this case, the missing energy
 distribution of the signal is determined by the nature and the mass of
-the Dark Matter particles and the Lorentz structure of the
+the DM particles and the Lorentz structure of the
 interaction. Only the overall production rate is a free parameter to
 be constrained or measured.  Provided that the contact interaction
 approximation holds, these EFTs provide a straightforward way to
 compare the results from different collider searches with non-collider
-searches for Dark Matter.  
+searches for DM.  
 
 The EFT describes the case when the mediator of the interaction between SM and DM particles are very heavy; 
 if this is not the case, models that explicitly include these mediators are 
 needed~\cite{Goodman:2010yf,Shoemaker:2011vi,Bai:2010hh,Kopp:2011eu,Fox:2011fx,Fox:2011pm,Shoemaker:2011vi,Busoni:2013lha}.
 Some ``simplified models'' \cite{Alwall:2008ag,Goodman:2011jq,Alves:2011wf}
-of Dark Matter production were constructed, including particles and interactions beyond the SM.
+of DM production were constructed, including particles and interactions beyond the SM.
 These models can be used consistently at LHC energies, and provide
 an extension to the EFT approach. 
 Many proposals for such models have emerged (see, for example
@@ -68,8 +68,8 @@ Refs. \cite{An:2012va,An:2012ue,Tait:2013,Buchmueller:2013dya,Bai:2013iqa,Bai:20
 %Such particles can mediate reactions that produce Dark Matter
 %particles.
 At the LHC, the kinematics of mono-X reactions occurring via a \tev-scale mediator can differ substantially from the prediction of the contact
-interaction. The mediator may also produce qualitatively different signals, such as decays back into Standard Model particles. 
-Thus, appropriate simplified models are an important component of the design, optimization, and interpretation of Dark Matter searches at ATLAS and CMS.
+interaction. The mediator may also produce qualitatively different signals, such as decays back into the SM particles. 
+Thus, appropriate simplified models are an important component of the design, optimization, and interpretation of DM searches at ATLAS and CMS.
 This has already been recognized in the CDF, ATLAS and CMS searches quoted above, where both EFT and selected simplified model
 results are presented. 
 
@@ -85,13 +85,13 @@ benchmarks for early LHC Run-2 searches.
 Following the DM@LHC workshop, ATLAS and CMS organized a forum, called the~\textit{ATLAS-CMS Dark
 Matter Forum}, to form a consensus on the use of these simplified models
 and EFTs for early Run-2 searches with the participation of experts on
-theories of Dark Matter. This is the final report of the ATLAS-CMS Dark Matter Forum.
+theories of DM. This is the final report of the ATLAS-CMS Dark Matter Forum.
 
 One of the guiding principles of this report is to channel the efforts
 of the ATLAS and CMS collaborations towards a minimal basis of dark
 matter models that should influence the design of the early Run-2
 searches. At the same time, a thorough survey of realistic collider
-signals of Dark Matter is a crucial input to the overall design of the
+signals of DM is a crucial input to the overall design of the
 search program.
 
 The goal of this report is such a survey, though confined within some
@@ -108,7 +108,7 @@ important to restrict the scope and timescale to the following:
   Run-2 searches. The values for the scan on the parameters of the models for which
   experimental results are provided should be specified, to facilitate theory reinterpretation 
   beyond the necessary model-independent limits that 
-  should be provided by all LHC Dark Matter searches. 
+  should be provided by all LHC DM searches. 
 \item The forum should recommend the use of the state of the art calculations
   for these benchmark models. Such a recommendation will aid the  
   standardization the event generator implementation
@@ -131,18 +131,18 @@ important to restrict the scope and timescale to the following:
 
 \section{Grounding Assumptions}
 
-We assume that interactions exist between Standard Model hadrons
-and the particles that constitute cosmological Dark Matter. If this
-is not the case, then proton collisions will not directly produce Dark Matter
-particles, and Dark Matter will not scatter off nuclei in direct
+We assume that interactions exist between the SM hadrons
+and the particles that constitute cosmological DM. If this
+is not the case, then proton collisions will not directly produce DM
+particles, and DM will not scatter off nuclei in direct
 detection experiments.
 
-The Dark Matter itself is assumed to be a single particle, a Dirac
+The DM itself is assumed to be a single particle, a Dirac
 fermion WIMP, stable on collider timescales and non-interacting with
 the detector.  
 The former assumption is reductionistic.
-The rich particle content of the Standard Model is circumstantial evidence that
-the Dark Matter sector, which constitutes five times as much of the
+The rich particle content of the SM is circumstantial evidence that
+the DM sector, which constitutes five times as much of the
 mass of the universe, may be more complex than a single particle or a
 single interaction. But, as was often the case in the discoveries of
 the SM, here only one mediator and one search channel might play a
@@ -150,9 +150,9 @@ dominant role in the opening stages of an LHC discovery. The latter
 assumption focuses our work on early LHC searches, where small
 kinematic differences between models will not matter in a discovery
 scenario, and with the imminent re-start of the LHC our report relies
-heavily on a large body of existing theoretical work which assumed Dirac fermionic Dark Matter. 
+heavily on a large body of existing theoretical work which assumed Dirac fermionic DM. 
 
-Different spins of Dark Matter particles will typically
+Different spins of DM particles will typically
 give similar results. Exceptions exist: For example, the choice of Majorana fermions forbids some
 processes that are allowed for Dirac fermions~\cite{Goodman:2010yf}.
 Aside from these, adjusting the choice of Dirac or Majorana fermions or scalars will produce only minor changes
@@ -160,7 +160,7 @@ in the kinematic distributions of the visible particle and is expected to have l
 on cut-and-count\sidenote{Cut-and-count refers to an analysis
 that applies a certain event selection and checks the inclusive number of events which pass. 
 This is to be contrasted with a shape analysis, which compares the distribution of events.} analysis. Thus the choice of Dirac
-fermion Dark Matter should be sufficient as benchmarks for the upcoming Run-2 searches. 
+fermion DM should be sufficient as benchmarks for the upcoming Run-2 searches. 
 
 % Should LHC searches uncover a signal consistent with these models, a much more exhaustive Nevertheless, a more complete
 % set of models will certainly be required upon a discovery. See
@@ -180,7 +180,7 @@ that much of our focus is on the mediator.
 
 We systematically explore the basic possibilities for
 mediators of various possible spins and couplings.
-All models considered are assumed to produce a signature with pairs of Dark Matter particles.
+All models considered are assumed to produce a signature with pairs of DM particles.
 Though more varied and
 interesting possibilities are added to the literature almost daily,
 these basic building blocks account for much of the physics studied at
@@ -188,8 +188,8 @@ hadron colliders in the past three decades.
 
 We also assume that Minimal Flavor Violation (MFV) \cite{Chivukula:1987py,Hall:1990ac,Buras:2000dm,D'Ambrosio:2002ex} applies to the
 models included in this report. This means that the flavor structure of the
-couplings between Dark Matter and ordinary particles follows the same
-structure as the Standard Model. This choice is simple, since no
+couplings between DM and ordinary particles follows the same
+structure as the SM. This choice is simple, since no
 additional theory of flavor is required, beyond what is already
 present in the SM, and it provides a mechanism to ensure that the
 models do not violate flavor constraints.  As a consequence, \spinzero
@@ -221,7 +221,7 @@ complete theories. Even though this factorized picture does not always
 lead to full theories and leaves out details that are necessary for
 the self-consistency of single models (e.g. the mass generation for
 mediator particles), it is a starting point to prepare a set of
-distinct but complementary collider searches for Dark Matter, as
+distinct but complementary collider searches for DM, as
 it leads to benchmarks that are easily comparable across channels.
 
 \section{Choices of benchmarks considered in this report and parameter scans}
