--- a/doc/tex/EWSpecificModels_VAMediators.tex
+++ b/doc/tex/EWSpecificModels_VAMediators.tex
@@ -32,7 +32,7 @@ In the case of a \spinone mediator,
 an example Feynman diagram for these processes can be constructed by taking
 Fig.~\ref{fig:OP} and replacing the gluon with $\gamma,W$ or $Z$.
 
-%CD: Peskin killed all of this
+%% The following is left for reference, but has been removed in internal review round. 
 %When the initial state radiation is a $W^\pm$ boson, Run~1 searches have considered three benchmark cases adapted from the vector interaction in Ref. ~\cite{Bai:2012xg}, distinguished by $\xi$, the strength of the $d$ quark coupling relative the $u$ quark coupling:
 %\begin{itemize}
 % \item[$\xi=0$:] Mediator couples to up-type or down-type quarks, but not both;
@@ -44,22 +44,6 @@ Fig.~\ref{fig:OP} and replacing the gluon with $\gamma,W$ or $Z$.
 
 When the initial state radiation is a W boson, Run-1 searches have considered three benchmark cases, varying the relative coupling of the $W$ to $u$ and ${d}$ quarks.
 The simplified model with a vector mediator mediator exchanged in the s-channel includes only the simplest of these cases, in which the $W$ coupling to $u$ and ${d}$ quarks is identical, as required naively by $\mathrm{SU}(2)$ gauge invariance.  With some more complex model building, other cases are possible.  The case in which the $u$ and ${d}$ couplings have opposite sign is particularly interesting, since this enhances the $W+\MET$ signal over the jet$+$\MET signal~\cite{Bell:2015sza,Bai:2012xg,Hamaguchi:2014pja}. An example of a model of this type is discussed in Appendix~\ref{app:monoWExtramodel}.
-
-%The scan in the parameters that characterize this simplified model for EW boson + \MET
-%searches follow what is
-%already detailed in Section~\ref{subsec:MonojetLikeModels}.
-
-
-% CD: I tend to like this list so I'll leave it here in hope of recycling it
-% \begin{itemize}
-%  \item the mass of the DM particle ($m_{DM}$);
-%  \item the mediator mass ($m_{Med}$);
-%  \item the mediator width ($\Gamma_{Med}$);
-%  \item the couplings between the DM and the mediator (\gdm),
-%  and between the mediator and the initial state quarks ($g_{SM}$);
-%  \item the chirality of the couplings between DM and mediator,
-%  and between mediator and initial state quarks (vector-vector, axial-vector, axial-axial, vector-axial).
-% \end{itemize}
 
 Simulations for the models in this Section have been done at the LO+PS level using  \madgraph 2.2.3 interfaced to \pythiaEight, 
 and therefore no special runtime configuration is needed for pythia 8. Even though merging samples with different parton multiplicities is possible,  this has not been deemed necessary as the visible signal comes from the production of a heavy SM boson whose transverse momentum distribution is sufficiently well described at LO+PS level. 
@@ -73,19 +57,9 @@ comparing a width that is set to $\Gamma=M_{med}/3$ to the
 minimal width (the ratio between the two widths
 ranges from 1.05 to 1.5 with increasing mediator masses).
 
-%% Redone as a table.
-% mmed : minW
-% 10  : 3.5
-% 50 : 21.3
-% 100 : 42.4
-% 300 : 127.3
-% 600 : 300.1
-% 1000 : 503
-% 3000 : 1512
-% 6000 : 3024
 \begin{table}[!h]
 \begin{tabular}{| l |r r r r|}\hline
-\multicolumn{5}{|c|}{Acceptance ratio for $\Gamma=\Gamma_{\rm min}$ vs
+\multicolumn{5}{|c|}{Acceptance ratio: $\Gamma=\Gamma_{\rm min}$ vs
 $\Gamma=\mMed/3$} \\ \hline 
 \multicolumn{1}{|c|}{ } & \multicolumn{4}{c|}{\mdm/GeV}\\
 \hline 
@@ -101,16 +75,9 @@ $\Gamma=\mMed/3$} \\ \hline
     \caption{Analysis acceptance ratios for the photon+\MET analysis when varying the mediator width, in the
     case of a vector mediator exchanged in the \schannel. The figures shown in this Section
     have been obtained using a LO UFO model in \madgraph 2.2.3 interfaced to \pythiaEight
-    for the parton shower.}%This plot will come from Marie-Helene
+    for the parton shower.}
     \label{fig:DMV_EW_gamma_acceptance}
 \end{table}
-
-%% \begin{figure}
-%%     \includegraphics[width=0.7\textwidth]{figures/EW/acceptance_minwidth_vs_mo3_gamma}
-%%     \caption{Analysis acceptance for the photon+\MET analysis when varying the mediator width, in the
-%%     case of a vector mediator exchanged in the \schannel}%This plot will come from Marie-Helene
-%%     \label{fig:DMV_EW_gamma_acceptance}
-%% \end{figure}
 
 Examples of relevant kinematic distributions for selected benchmark points are
 shown in Fig.~\ref{fig:DMV_EW_kinematics_SVMed}. 
